# my_twitter_ebac

./: .gitignore  README.md  pyproject.toml
my_twitter/: manage.py
my_twitter/my_twitter/: asgi.py  settings.py  urls.py  wsgi.py
my_twitter/twitter/: admin.py  forms.py  models.py  urls.py  views.py
my_twitter/twitter/migrations/: 0001_initial.py  0002_alter_profile_bio.py  0003_profile_date_modified.py  0004_alter_profile_date_modified.py  0005_tweet.py  0006_profile_image.py
my_twitter/twitter/static/css/: base.css  home.css  login.css  navbar.css  profile.css  profile_list.css  register.css  update_user.css
my_twitter/twitter/templates/: base.html  home.html  login.html  navbar.html  profile.html  profile_list.html  register.html  update_user.html
