[tool.poetry]
name = "my-twitter"
version = "0.1.0"
description = "my_twitter-api"
authors = ["ErickSwolkin <swolkinerick@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.4"
djangorestframework = "^3.15.1"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
